# movies

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.pg  README.md  docker-compose.yml  main_etl.py  main_from_sqlite.py  main_truncate_table.py  postman_tests.json  pyproject.toml  requirements.txt  sample.docker-compose.override.yml  sample.env  setup.cfg  start.sh  test.sh
.github/workflows/: code_checker.yml
01_etl/: Dockerfile  docker-compose.yml  film_work_loader_state.json  fw_persons.sql  main_check_db copy.py  main_check_db.py  main_etl.py  orm_q.sql  requirements.txt
01_etl/etl/: backoff.py  data_structures.py  etl_interfaces.py  extracters.py  loaders.py  state.py  transformers.py  utils.py
01_etl/states/: README.md
app/config/: settings.py
app/movies/: admin.py  models.py
app/sqlite_to_postgres/: truncate_table.py
compose/airflow/: Dockerfile
config/: settings.py
config/components/: templates.py
dags/: etl_dag.py
etl/: backoff.py  cli.py  data_structures.py  pipelines.py  state.py  transformers.py
etl/pg_to_es/: __init__.py  data_structures.py  etl_interfaces.py  extracters.py  loaders.py  pipelines.py  transformers.py
etl/sqlite_to_postgres/: tables.py
movies/: models.py
movies/migrations/: 0003_alter_genre_description.py
nginx/: nginx.conf
sqlite_to_postgres/loaders/: settings.py
src/admin_panel/: manage.py
tests/: .env.sample  config.py  conftest.py  constants.py  docker-compose.yml  pytest.ini  test_af.py  test_etl.py  test_spark.py  test_spark_pg_to_es.py  test_spark_sqlite.py
(+107 files in other folders)
