[metadata]
name = etl
description = project on etl
author = Aleksandr Lemikhov
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages =
    etl

python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.2
    pytest-cov>=2.0
    flake8>=6.0.0
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160